--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <!--Person 11-->
           <div class="card">
             <div class="box">
-              <img src="./Sourav.PNG" alt="" />
+              <img src="./Vaibhav.jpeg" alt="" />
               <div class="text">Vaibhav</div>
               <p>
                 "A small business is an amazing way to serve and leave an impact
